# fitness

./: README.md  chat.py  docker-compose.yml  ingest_pdfs.py  ingestion.py  rag_chain.py
Microsoft/Windows/PowerShell/: ModuleAnalysisCache
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: main.py
backend/app/ai/: ingestion.py  prompts.py  rag_chain.py
backend/app/api/: auth.py  chat.py  diet.py  users.py  workout.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: chat.py  user.py
backend/app/schemas/: chat.py  user.py
backend/data/: README.md  pdf_knowledge_index.json
backend/data/pdfs/: README.md
backend/scripts/: ingest_pdfs.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: Chat.tsx  Dashboard.tsx  DietPlan.tsx  Login.tsx  Profile.tsx  Register.tsx  WorkoutPlan.tsx
frontend/src/store/: authStore.ts
